--- a/infinite-scroll/basic/style.css
+++ b/infinite-scroll/basic/style.css
@@ -14,18 +14,16 @@ body {
 #app.loading::after {
   content: "... 로딩중 ...";
   position: absolute;
-
-  /* 정중앙 배치 */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 #list {
-  margin: 0;
   padding: 0;
-  list-style: none;
+  margin: 0;
   border-top: solid 1px #ccc;
+  list-style: none;
 }
 
 #fetchMore {
@@ -34,6 +32,7 @@ body {
   left: 0;
   right: 0;
   margin-top: 10px;
+  /* dynamic */
   display: none;
   text-align: center;
   line-height: 28px;
@@ -50,9 +49,9 @@ body {
   content: "... 로딩중 ...";
 }
 
+/* javascript */
 li {
   display: flex;
-  flex-direction: row;
   border-bottom: solid 1px #ccc;
   font-size: 0.8em;
   color: #999;
@@ -62,8 +61,7 @@ li {
   flex: 0 0 30px;
   padding: 10px 5px;
   text-align: center;
-
-  /* justify-self: center + align-self: center */
+  /* <'align-self'> <'justify-self'> center */
   place-self: center;
 }
 
