--- a/drop-down/basic/style.css
+++ b/drop-down/basic/style.css
@@ -1,6 +1,7 @@
-body {
-  width: 100%;
-  height: 100%;
+*,
+*::after,
+*::before {
+  padding: 0;
   margin: 0;
 }
 
@@ -10,70 +11,87 @@ body {
   margin: 0;
 }
 
-/* js */
 .dropdown-container {
   /* @see https://developer.mozilla.org/ko/docs/Web/CSS/width */
   width: fit-content;
 
-  /* 특정 시작점부터 option 들을 펼쳐야한다. */
+  /* option label */
   position: relative;
-  display: block;
 }
 
-.dropdown-select-label-container {
-  background-color: rgba(0, 0, 0, 0.9);
+dropdown-select-label-container {
   width: fit-content;
+
+  background-color: rgba(0, 0, 0, 0.9);
   padding: 0.35em 0.75em 0.25em 0.75em;
 }
 
 .dropdown-select-label {
-  vertical-align: middle;
-  display: inline-block;
-  margin: -6px;
+  cursor: pointer;
 }
 
-.dropdown-item-list-box {
+.dropdown-select-arrow-container {
+  display: inline-block;
+  margin: -6px;
+
+  vertical-align: middle;
+}
+
+.dropdown-select-arrow {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid;
+  margin: 0 4px;
+  color: rgba(0,0,0,.54);
+
+  cursor: pointer;
+}
+
+.dropdown-list {
+  position: absolute;
+  top: 8px;
+  z-index: 999;
+
   box-shadow: 2px 2px 2px 2px gray;
   background-color: #ccc;
   opacity: 1;
-  display: block;
-  position: absolute;
-  z-index: 999;
-  top: 8px;
 }
 
-.dropdown-item-box {
+.dropdown-item {
   position: relative;
-  display: block;
   padding: 0.25em 0.25em 0.25em 0.25em;
   cursor: pointer;
 }
 
-.dropdown-item-box:hover {
+.dropdown-item:hover {
   background-color: darkgray;
 }
 
-.dropdown-item-box.selected:hover {
-  background-color: darkgray;
-}
-
-.dropdown-item-box.selected {
+.dropdown-item.selected {
   font-weight: 800;
   background-color: antiquewhite;
 }
 
-.table-container {
+.dropdown-item.selected:hover {
+  background-color: darkgray;
+}
+
+
+.userlist-container {
   position: relative;
   border: 1px solid #ccc;
 }
 
-.back-drop {
-  /* js */
-  display: none;
+.backdrop {
+  position: absolute;
   width: 100%;
   height: 100%;
   margin: 0px;
-  position: absolute;
   top: 0px;
   left: 0px;
+
+  /* js */
+  display: none;
 }
